--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,16 +13,19 @@
     "prisma:studio": "prisma studio"
   },
   "dependencies": {
-    "@weaving-flow/core": "workspace:*",
     "@fastify/cors": "^8.4.1",
     "@fastify/jwt": "^7.2.3",
     "@prisma/client": "^5.6.0",
+    "@trpc/server": "^10.45.2",
+    "@weaving-flow/core": "workspace:*",
     "dotenv": "^16.3.1",
     "fastify": "^4.24.3",
+    "jsonwebtoken": "^9.0.2",
     "playwright": "^1.40.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^20.10.0",
     "eslint": "^8.54.0",
     "prisma": "^5.6.0",
