--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -16,6 +16,9 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@reduxjs/toolkit": "^2.0.1",
+    "@tanstack/react-query": "^4.36.1",
+    "@trpc/client": "^10.45.2",
+    "@trpc/react-query": "^10.45.2",
     "@weaving-flow/core": "workspace:*",
     "antd": "^5.23.0",
     "axios": "^1.6.2",
