feat(server): Improve workflow, browser nodes support sending mail

--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -4,3 +4,11 @@ HOST="127.0.0.1"
 JWT_SECRET="your-secret-key"
 PASSWORD_SECRET="your-password-secret"
 CORS_ORIGIN="*"
+
+# EMAIL
+EMAIL_HOST="smtp.example.com"
+EMAIL_PORT=587
+EMAIL_SECURE=false
+EMAIL_USER="your-email@example.com"
+EMAIL_PASSWORD="your-password"
+DEFAULT_SEND_EMAIL_USER="your-email@example.com"
