--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,12 +21,14 @@
     "dotenv": "^16.3.1",
     "fastify": "^4.24.3",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.10.0",
     "playwright": "^1.40.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^20.10.0",
+    "@types/nodemailer": "^6.4.17",
     "eslint": "^8.54.0",
     "prisma": "^5.6.0",
     "tsup": "^8.0.1",
